--- a/version.html
+++ b/version.html
@@ -1,1 +1,1 @@
-{ "version": "2.2.0-pre10", "sha256": "", "patch": { "Additions": ["Many Bug Fixes.", "Fixes Hypixel API Issues."], "NOTE": ["§cPrevious Versions of the Mod WILL be disabled soon."] } }
+{ "version": "2.2.0-pre10", "sha256": "", "patch": { "Additions": ["Many Bug Fixes.", "Fixes Hypixel API Issues.", "Full Changelogs in Discord"], "NOTE": ["§cPrevious Versions of the Mod WILL be disabled soon."] } }
