--- a/version.html
+++ b/version.html
@@ -1,1 +1,1 @@
-{ "version": "2.2.0-pre12", "sha256": "", "patch": { "Additions": ["Many Bug Fixes.", "Fixes Hypixel API Issues.", "Full Changelogs in Discord"], "NOTE": ["§cPrevious Versions of the Mod WILL be disabled soon."] } }
+{ "version": "2.2.0-pre14", "sha256": "", "patch": { "Additions": ["Many Bug Fixes.", "Fixes Hypixel API Issues.", "Rift Features", "Full Changelogs in #non-private-pre-releases"], "NOTE": ["§cThis version has many backend changes, please read the disclaimer to learn more."] } }
