--- a/version.html
+++ b/version.html
@@ -1,1 +1,1 @@
-{ "version": "2.2.0-pre14", "sha256": "", "patch": { "Additions": ["Many Bug Fixes.", "Fixes Hypixel API Issues.", "Rift Features", "Full Changelogs in #non-private-pre-releases"], "NOTE": ["§cThis version has many backend changes, please read the disclaimer to learn more."] } }
+{ "version": "2.2.0-pre14", "sha256": "", "patch": { "Additions": ["Many Bug Fixes.", "Fixes Hypixel API Issues.", "Rift Features", "Full Changelogs in #non-private-pre-releases"], "NOTE": ["§cThis version has many backend changes, please read the changelogs in the discord to learn more."] } }
